
version 0.11.0:
	* MSN works again
	* Fixed a little segfault when images are links
	* Redid the about box again.
	* Fixed a nice little bug with the manual browser command
	* Oscar Unicode fix (Thanks John Matthews)
	* Added Russian Translation
	* Can select which protocols are compiled statically
	  (e.g.: ./configure --with-static-prpls=oscar,jabber)

version 0.11.0-pre14 (06/17/2001):
	* Fixed a segfault with Oscar's account confirmation
	  (Thanks, Adam)
	* Updated the German translation (Thanks, Dominik)
	* Some MSN changes
	* Some HTML widget changes
	* Can specify hosts/ports for Yahoo (thanks Jeremy Brooks)
	* Many many bugfixes

version 0.11.0-pre13 (06/06/2001):
	* Can view/set chat topic in Jabber (thanks faceprint)
	* The napster plugin no longer segfaults on invalid names
	  and/or passwords.
	* HTML is properly stripped from away messages in protocols that
	  do not use HTML.  (thanks, faceprint)
	* Can view/set chat topic in IRC
	* MSN properly escapes outgoing messages
	* Much needed updates to the gaim man page (thanks, Sean Egan)

version 0.11.0-pre12 (05/29/2001):
	* Fixed a funny bug with auto responses when queued messages
	  are enabled.
	* Redesigned the Font Options preference page
	* Improved Jabber chat support (it whispers now, too)
	* Zephyr can do Subscriptions now (thanks to nsanch)
	* Auto-recon plugin got reworked
	* Lots of clean-ups
	* Some new pixmaps (Thanks, DennisR).
	* Fixed a segfault in IRC (Thanks Sean Egan)
	* MSN can now change your 'friendly name' (Thanks for the
	  packet logs, aechols)
	* More IRC improvements [colors, etc] (Thanks Sean Egan)
	* Improved proxy options
	* Fixed a small issue with HTML not being stripped from
	  log files properly (Thanks, faceprint and David Stoddard)
	* Can turn on/off Yahoo! Mail announcements
	* Can force messages through the server for ICQ (use this if
	  you have problems sending)
	* Can receive buddy icons in Oscar (requires gdk_pixbuf,